* Factored out directory path chooser dialog * Add directory choice for export * Make timer a daemon thread so it doesn't block a closed application * Add support for deciding where to store systems file depending on the os